      will allow the "not null constraint" error to raise,
      not an attempt to execute a nonexistent "col_id_seq" 
      sequence.  [ticket:1516]
    
    - autoincrement SELECT statements, i.e. those which 
      select from a procedure that modifies rows, now work 
      with server-side cursor mode (the named cursor isn't 
      used for such statements.)
      
- mysql
    - New dialects: oursql, a new native dialect, 
      MySQL Connector/Python, a native Python port of MySQLdb,
      and of course zxjdbc on Jython.
    
    - VARCHAR/NVARCHAR will not render without a length, raises
      an error before passing to MySQL.   Doesn't impact 
      CAST since VARCHAR is not allowed in MySQL CAST anyway,
      the dialect renders CHAR/NCHAR in those cases.
      
    - all the _detect_XXX() functions now run once underneath
      dialect.initialize()

    - somewhat better support for % signs in table/column names;
      MySQLdb can't handle % signs in SQL when executemany() is used,
      and SQLA doesn't want to add overhead just to treat that one 
      non-existent use case. [ticket:1279]
    
    - the BINARY and MSBinary types now generate "BINARY" in all
      cases.  Omitting the "length" parameter will generate
      "BINARY" with no length.  Use BLOB to generate an unlengthed
      binary column.
      
    - the "quoting='quoted'" argument to MSEnum/ENUM is deprecated.
      It's best to rely upon the automatic quoting.
      
    - ENUM now subclasses the new generic Enum type, and also handles
      unicode values implicitly, if the given labelnames are unicode
      objects.
    
    - a column of type TIMESTAMP now defaults to NULL if
      "nullable=False" is not passed to Column(), and no default
      is present. This is now consistent with all other types, 
      and in the case of TIMESTAMP explictly renders "NULL" 
      due to MySQL's "switching" of default nullability
      for TIMESTAMP columns. [ticket:1539]
      
- oracle